--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@supabase/auth-helpers-nextjs": "latest",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
+    "@supabase/supabase-js": "^2.49.9",
     "antd": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
